FIX: fix can't touch about in nav on mobiles

--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -65,7 +65,7 @@ header {
 
 .header-nav-bg-touch {
   width   : 100%;
-  height  : Calc(100% - 49.8px * 5);
+  height  : Calc(100% - 45.8px * 6);
   position: absolute;
   bottom  : 0;
 }
